<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:fitsSystemWindows="true">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/activityLoginContentView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:src="@drawable/ic_toolbar"
            app:layout_constraintBottom_toTopOf="@id/activityLoginEmailInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activityLoginEmailInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toTopOf="@id/activityLoginPasswordInputLayout"
            app:layout_constraintEnd_toEndOf="@id/activityLoginPasswordInputLayout"
            app:layout_constraintStart_toStartOf="@id/activityLoginPasswordInputLayout">

            <AutoCompleteTextView
                android:id="@+id/activityLoginEmailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/activityLoginPasswordInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/activityLoginPasswordEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1" />

        </android.support.design.widget.TextInputLayout>

        <com.goboxy.nugl.common.widgets.LoadingButton
            android:id="@+id/activityLoginSignInButton"
            style="@style/Button.Accent"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/action_sign_in"
            app:layout_constraintEnd_toEndOf="@id/activityLoginPasswordInputLayout"
            app:layout_constraintStart_toStartOf="@id/activityLoginPasswordInputLayout"
            app:layout_constraintTop_toBottomOf="@id/activityLoginPasswordInputLayout" />

        <TextView
            android:id="@+id/activityLoginForgotPasswordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?android:selectableItemBackground"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toBottomOf="@id/activityLoginSignInButton"
            tools:text="Forgot your password? Recover it." />

        <TextView
            android:id="@+id/activityLoginSignUpTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:background="?android:selectableItemBackground"
            android:gravity="center_horizontal"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/activityLoginForgotPasswordTextView"
            app:layout_constraintVertical_bias="1"
            tools:text="Don't have an account? Sign up." />

    </android.support.constraint.ConstraintLayout>

</ScrollView>